# UE-RealtimeTranslationMod

./: CMakeLists.txt  README-EN.md  README.md
config/: translation_config.json  vocabulary.json
include/: AIProvider.hpp  ConfigManager.hpp  DebugLogger.hpp  EntityExtractor.hpp  HookTargetSelector.hpp  NetworkClient.hpp  TemplateCache.hpp  TextApplicator.hpp  TextHookManager.hpp  TranslationCommon.hpp  TranslationManager.hpp  TranslationMod.hpp  UIPropertyScanner.hpp  VocabularyCache.hpp
include/UI/: TranslationUI.hpp  Win32TranslationUI.hpp
src/: AIProvider.cpp  ConfigManager.cpp  EntityExtractor.cpp  HookTargetSelector.cpp  NetworkClient.cpp  TemplateCache.cpp  TextApplicator.cpp  TextHookManager.cpp  TranslationManager.cpp  TranslationMod.cpp  UIPropertyScanner.cpp  VocabularyCache.cpp  dllmain.cpp
src/UI/: TranslationUI.cpp  Win32TranslationUI.cpp
